devops/k8s/4.nginx/2.live-backend-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-backend-nginx-service
  namespace: live-namespace
  labels:
    name: live-backend-nginx-service
    app: live-backend-webapp
    tier: backend

spec:
  # type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30800
  selector:
    name: live-backend-nginx-pod
    app: live-backend-webapp
    tier: backend
